v18.0.4
- Revamped checksum verification for NES patching
- Fixed typos for Zelda I and Zelda II Additional Options

v18.0.3
- Added iQue patches for OoT and SM64
- Fixed issue with checksum not updating and being accessible

v18.0.2
- Added new Rupee Icon(s) color options
- Fixed issues with new GUI modes

v18.0.1
- Added Rev2 Widescreen patches for OoT and Gold Quest
- Removed "Lite" and "Streamlined" GUI modes and added "Simplified" GUI mode

v18.0.0
- Added new Text Editor for OoT & MM
- Added Shop Model Tunic colors for OoT (by Username0713)
- Added new "Recovery" options for OoT
- Added new "Remove Magic Quick Spin" option for OoT
- Added new "No Bottled Fairies" option for OoT
- Added dialogue changes for changed equipment names
- Added new split customization for the Easier Minigames option
- Added extended functionality to dropdown menus
- Removed "Hide Equipment" option for OoT
- Overhauled patching dialogue
- Improved patching dialogue options by utilizing the text editor
- Fixed typos
- Fixed a bunch of options for OoT & MM not getting patched in correctly
- Fixed incorrect rewards for the Bombchu Bowling Minigame for the Easier Minigames option

v17.4.0 (preparation update for v18.0.0)
- Initial Overhaul for the upcomming v18.0.0 Text Editor update
- Added new "Side Backflip" option for OoT (by Username0713)
- Added new "Style" options for OoT & MM (by Third M)
- Fixed issue with patching custom music sequences
- Fixed crash issues when trying to buy items in Gold Quest Remix
- Fixed several other minor issues
- Fixed Gold Quest Remix bugs and crashes
- Overhauled "Additional Options" layouts for OoT, GQ, MoT & MM
- Improved overall performance

v17.3.6
- Adjusted "Additional Options" Advanced Mode window sizes for OoT, GQ & MoT

v17.3.5
- Added Gold Quest support for Additional Options
- Added new "Always Advance" option for MK64
- Added missing preview icon for The Missing Link HUD Button (large)
- Updated JSON date for languages

v17.3.4