@@ -1,6 +1,7 @@
 v18.0.4
 - Revamped checksum verification for NES patching
 - Fixed typos for Zelda I and Zelda II Additional Options
+- Fixed issue with GFX and Animated Tiles options for Zelda I
 
 v18.0.3
 - Added iQue patches for OoT and SM64
